Font color changes

--- a/inst/rmarkdown/templates/AAGI HTML/skeleton/UQtstyles.css
+++ b/inst/rmarkdown/templates/AAGI HTML/skeleton/UQtstyles.css
@@ -37,7 +37,7 @@ h1.title {
   font-family: var(--aagi-font-stack);
   font-size: 21pt;
   font-weight: bold;
-  color: #414042;
+  color: #00808b;
   margin-top: 5px;
 }
 
