Change in logos

--- a/inst/rmarkdown/templates/AAGI HTML/skeleton/header.html
+++ b/inst/rmarkdown/templates/AAGI HTML/skeleton/header.html
@@ -8,5 +8,5 @@
 </style>
 
 <div id="logo">
-  <img src="images/AAGI.png" style="height:100px;">
+  <img src="https://github.com/AAGI-AUS/AAGI-Style-Guide-and-Logos/blob/main/assets/aagi-logo.svg?raw=true" style="height:100px;">
 </div>
