--- a/inst/rmarkdown/templates/AAGI HTML/skeleton/header.html
+++ b/inst/rmarkdown/templates/AAGI HTML/skeleton/header.html
@@ -1,12 +1,60 @@
 <style>
-#logo {
-  position: absolute;
+#fixed-logo {
+  position: fixed;
   top: 10px;
   right: 20px;
   z-index: 1000;
+  background: white;
+  padding: 5px;
+  border-radius: 4px;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+}
+#fixed-logo img {
+  height: 100px;
+  display: block;
+}
+
+#header-container {
+  position: relative;
+  padding-bottom: 160px; 
+}
+
+
+#below-title-logo {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;  
+  text-align: center;
+  z-index: 1000;
+}
+#below-title-logo img {
+  width: 100%;
+  height: auto;
+  max-height: 120px; 
+  object-fit: contain;
+  display: inline-block;
 }
 </style>
 
-<div id="logo">
-  <img src="https://github.com/AAGI-AUS/AAGI-Style-Guide-and-Logos/blob/main/assets/aagi-logo.svg?raw=true" style="height:100px;">
+<div id="fixed-logo">
+  <img src="https://github.com/AAGI-AUS/AAGI-Style-Guide-and-Logos/blob/main/assets/aagi-logo.svg?raw=true" alt="Fixed Logo">
 </div>
+
+<script>
+document.addEventListener("DOMContentLoaded", function() {
+  var header = document.querySelector('div.title, div.title-block, div.header, div#header, header, section.title');
+
+  if (!header) {
+    console.warn("Header container not found!");
+    return;
+  }
+
+  header.id = "header-container";
+
+  var belowLogo = document.createElement('div');
+  belowLogo.id = "below-title-logo";
+  belowLogo.innerHTML = '<img src="https://github.com/AAGI-AUS/AAGI-Style-Guide-and-Logos/blob/main/assets/Partners.svg?raw=true" alt="Below Title Full-Width Logo">';
+  header.appendChild(belowLogo);
+});
+</script>
